_sass/_table-columns.scss
  /* Team Career Table */
  th.year-team-career {
    width: 5%;
  }

  /* Team Game Table */
  th.year-team-game {
    width: 5%;
  }

  th.round-team-game {
    width: 15%;
  }

  th.team-team-game {
    width: 15%;
  }

  th.opponent-team-game {
    width: 15%;
  }

  th.result-team-game {
    width: 5%;
  }

  th.score-team-game {
    width: 10%;
  }

  th.tossups-team-game {
    width: 5%;
  }

  th.negs-team-game {
    width: 5%;
  }

  th.ppb-team-game {
    width: 5%;
  }

  th.packet-team-game {
    width: 20%;
  }

  /* Team Player Table */
  th.year-team-player {
    width: 5%;
  }

  th.team-team-player {
    width: 15%;
  }

  th.player-team-player {
    width: 50%;
  }

  th.games-team-player {
    width: 5%;
  }

  th.tossups-team-player {
    width: 5%;
  }

  th.negs-team-player {
    width: 5%;
  }

  th.points-team-player {
    width: 5%;
  }

  th.ppg-team-player {
    width: 10%;
  }

  /* Player Career Table */
  th.year-player-career {
    width: 5%;
  }

  th.team-player-career {
    width: 10%;
  }

  th.finish-player-career {
    width: 15%;
  }

  th.g-player-career {
    width: 50%;
  }

  th.pts-player-career {
    width: 5%;
  }

  th.ppg-player-career {
    width: 5%;
  }

  /* Player Game Table */
  th.year-player-game {
    width: 5%;
  }

  th.round-player-game {
    width: 15%;
  }

  th.player-player-game {
    width: 15%;
  }

  th.team-player-game {
    width: 10%;
  }

  th.opponent-player-game {
    width: 15%;
  }

  th.result-player-game {
    width: 5%;
  }

  th.packet-player-game {
    width: 20%;
  }

  /* Game Player Table */
  th.player-team-game-players {
    width: 75%;
  }

  th.tossups-team-game-players {
    width: 5%;
  }

  th.negs-team-game-players {
    width: 5%;
  }

  th.pts-team-game-players {
    width: 5%;
  }

  /* Standings */
  th.rank-standings {
    width: 5%;
  }

  th.team-standings {
    width: 15%;
  }
  
  /* Record Book */
  th.record-records {
    width: 5%;
  }

  th.opponent-records {
    width: 45%;
  }

  th.year-records {
    width: 5%;
  }

  th.player-records {
    width: 30%;
  }

  th.g-records {
    width: 5%;
  }

  th.app-records {
    width: 5%;
  }
      
th.name {
  width: 20%;
}

th.affiliations {
  width: 30%;
}

th.contributions {
  width: 50%;
}

th.round {
  width: 15%;
}

th.player {
  width: 15%;
}

th.team {
  width: 10%;
}

th.opponent {
  width: 15%;
}

th.packet {
  width: 25%;
}

